@@ -652,6 +652,13 @@ abstract class Skin extends Linker {
 
 		if ( $title->getNamespace() == NS_SPECIAL ) {
 			$type = 'ns-special';
+			// bug 23315: provide a class based on the canonical special page name without subpages
+			list( $canonicalName ) = SpecialPage::resolveAliasWithSubpage( $title->getDBkey() );
+			if ( $canonicalName ) {
+				$type .= ' ' . Sanitizer::escapeClass( "special-$canonicalName" );
+			} else {
+				$type .= ' mw-invalidspecialpage';
+			}
 		} elseif ( $title->isTalkPage() ) {
 			$type = 'ns-talk';
 		} else {
